--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <span><b>Links</b></span>
                 <p><a href="#servicos">Serviços</a></p>
                 <p><a href="#empresa">Empresa</a></p>
-                <p><a href="#sobre">Sobre</a></p>
+                <p><a href="sobre.html">Sobre</a></p>
             </div>
         </div>
 
