--- a/ateez.html
+++ b/ateez.html
@@ -213,7 +213,7 @@
         </div>
 
         <div class="card">
-            <img src="https://cdns-images.dzcdn.net/images/cover/d23376c71e824906bf3fe1e1d4713dfa/500x500.jpg" alt="Imagem da Notícia" class="card-img">
+            <img src="https://i.scdn.co/image/ab67616d0000b27354f9a62b56465fe3cb6eb7e5" alt="Imagem da Notícia" class="card-img">
             <h2 class="card-title">The World EP.Fin: Will</h2>
             <p class="card-text">È o segundo álbum de estúdio em coreano e o quarto álbum de estúdio lançado em 1 de dezembro de 2023 pela KQ Entertainment </p>
             <span class="card-date">03 de Outubro de 2024</span>
@@ -223,21 +223,28 @@
             <img src="https://i.scdn.co/image/ab67616d0000b273ba27e1c8a572e31571a4d589" alt="Imagem da Notícia" class="card-img">
             <h2 class="card-title">The World EP.2: Outlaw</h2>
             <p class="card-text">Foi lançado em 16 de junho de 2023 pela KQ Entertainment. É composto por seis faixas, incluindo o single "Bouncy".  </p>
-            <span class="card-date">03 de Outubro de 2024</span>
+            <span class="card-date">10 de Outubro de 2024</span>
         </div>
 
         <div class="card">
             <img src="https://i.scdn.co/image/ab67616d0000b2738bc5762a75c18b494803705c" alt="Imagem da Notícia" class="card-img">
             <h2 class="card-title">Spin Off: From the Witness</h2>
             <p class="card-text">Foi lançado em 30 de dezembro de 2022, pela KQ Entertainment. O álbum consiste em cinco faixas, incluindo o single principal "Halazia". </p>
-            <span class="card-date">03 de Outubro de 2024</span>
+            <span class="card-date">10 de Outubro de 2024</span>
         </div>
 
         <div class="card">
-            <img src="https://i.scdn.co/image/ab67616d0000b2738bc5762a75c18b494803705c" alt="Imagem da Notícia" class="card-img">
-            <h2 class="card-title">Spin Off: From the Witness</h2>
-            <p class="card-text">Foi lançado em 30 de dezembro de 2022, pela KQ Entertainment. O álbum consiste em cinco faixas, incluindo o single principal "Halazia". </p>
-            <span class="card-date">03 de Outubro de 2024</span>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLN10HeUlDnCXB_gq3tiyy8iKfhfspm2ysmQ&s" alt="Imagem da Notícia" class="card-img">
+            <h2 class="card-title">Zero: Fever Part.1</h2>
+            <p class="card-text">Foi lançado em 29 de julho de 2020, com "Inception" e "Thanxx" servindo como singles principais. O álbum físico vem em três versões.</p>
+            <span class="card-date">10 de Outubro de 2024</span>
+        </div>
+
+        <div class="card">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmuSiyO_A8DsZDjLEoU2IUZWkJo8uWGaW86A&s" alt="Imagem da Notícia" class="card-img">
+            <h2 class="card-title">Treasure EP.1: All to Zero</h2>
+            <p class="card-text">Treasure EP.1: All to Zero é o EP de estreia. Foi lançado em 24 de outubro de 2018, com "Pirate King" e "Treasure"</p>
+            <span class="card-date">10 de Outubro de 2024</span>
         </div>
     </div>
 
@@ -643,26 +650,26 @@
         <div class="rodape-div-1">
             <div class="rodape-div-1-coluna">
                 <!-- elemento -->
-                <img alt="Profile shot for Celina Harris" src="img/kpopland.png" width="130">
-                <p>SIA Trecho 5 lote 000 bloco z sala 900 - Guará, Brasília - DF, 70000-010</p>
+                <img alt="" src="img/kpopland.png" width="130">
+                <p>Feito: Luiz Fernando</p>
             </div>
         </div>
-
+  
         <div class="rodape-div-2">
             <div class="rodape-div-2-coluna">
                 <!-- elemento -->
                 <span><b>Contatos</b></span>
-                <p>contato@na.na</p>
-                <p>+55 63 99200-0000</p>
+                <p>luiz.toledo12@etec.sp.gov.br</p>
+                <p>+55 12 996394245</p>
             </div>
         </div>
-
+  
         <div class="rodape-div-3">
             <div class="rodape-div-3-coluna">
                 <!-- elemento -->
                 <span><b>Links</b></span>
-                <p><a href="#servicos">Serviços</a></p>
-                <p><a href="#empresa">Empresa</a></p>
+                <p><a href="./rodapetelas/redes.html">Redes</a></p>
+                <p><a href="./rodapetelas/duvidas.html">Dúvidas</a></p>
                 <p><a href="sobre.html">Sobre</a></p>
             </div>
         </div>
