--- a/babymonster.html
+++ b/babymonster.html
@@ -97,30 +97,30 @@
 
     <div class="rodape-div-1">
       <div class="rodape-div-1-coluna">
-        <!-- elemento -->
-        <img alt="Profile shot for Celina Harris" src="img/kpopland.png" width="130">
-        <p>SIA Trecho 5 lote 000 bloco z sala 900 - Guará, Brasília - DF, 70000-010</p>
+          <!-- elemento -->
+          <img alt="" src="img/kpopland.png" width="130">
+          <p>Feito: Luiz Fernando</p>
       </div>
-    </div>
+  </div>
 
-    <div class="rodape-div-2">
+  <div class="rodape-div-2">
       <div class="rodape-div-2-coluna">
-        <!-- elemento -->
-        <span><b>Contatos</b></span>
-        <p>contato@na.na</p>
-        <p>+55 63 99200-0000</p>
+          <!-- elemento -->
+          <span><b>Contatos</b></span>
+          <p>luiz.toledo12@etec.sp.gov.br</p>
+          <p>+55 12 996394245</p>
       </div>
-    </div>
+  </div>
 
-    <div class="rodape-div-3">
+  <div class="rodape-div-3">
       <div class="rodape-div-3-coluna">
-        <!-- elemento -->
-        <span><b>Links</b></span>
-        <p><a href="#servicos">Serviços</a></p>
-        <p><a href="#empresa">Empresa</a></p>
-        <p><a href="#sobre">Sobre</a></p>
+          <!-- elemento -->
+          <span><b>Links</b></span>
+          <p><a href="./rodapetelas/redes.html">Redes</a></p>
+          <p><a href="./rodapetelas/duvidas.html">Dúvidas</a></p>
+          <p><a href="sobre.html">Sobre</a></p>
       </div>
-    </div>
+  </div>
 
     <div class="rodape-div-4">
       <div class="rodape-div-4-coluna">
