--- a/lesserafim/chaewon.html
+++ b/lesserafim/chaewon.html
@@ -9,7 +9,7 @@
   <title>KpopLand</title>
   <style>
     body {
-      background: linear-gradient(90deg, rgba(97, 29, 242, 1) 0%, rgba(110, 26, 232, 1) 35%, rgba(131, 82, 235, 1) 100%);
+       background: linear-gradient(90deg, rgba(97, 29, 242, 1) 0%, rgba(110, 26, 232, 1) 35%, rgba(131, 82, 235, 1) 100%); 
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
@@ -17,6 +17,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      
     }
 
     /* Barra de navegação */
@@ -26,8 +27,6 @@
       width: 100%;
       display: flex;
       align-items: center;
-      padding: 0 20px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
     .home-icon {
@@ -51,7 +50,7 @@
       border-radius: 15px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       overflow: hidden;
-      max-width: 900px;
+      max-width: 100%;
       margin: 40px auto;
       display: flex;
       align-items: center;
@@ -80,6 +79,7 @@
       font-size: 28px;
       color: #6E1AE8;
       margin-bottom: 10px;
+      text-align: center;
     }
 
     .info-panel {
@@ -370,8 +370,8 @@
       <div class="rodape-div-1">
           <div class="rodape-div-1-coluna">
               <!-- elemento -->
-              <img src="../img/kpopland.png" width="130">
-              <p>SIA Trecho 5 lote 000 bloco z sala 900 - Guará, Brasília - DF, 70000-010</p>
+              <img alt="" src="../img/kpopland.png" width="130">
+              <p>Feito: Luiz Fernando</p>
           </div>
       </div>
 
@@ -379,8 +379,8 @@
           <div class="rodape-div-2-coluna">
               <!-- elemento -->
               <span><b>Contatos</b></span>
-              <p>contato@na.na</p>
-              <p>+55 63 99200-0000</p>
+              <p>luiz.toledo12@etec.sp.gov.br</p>
+              <p>+55 12 996394245</p>
           </div>
       </div>
 
@@ -388,8 +388,8 @@
           <div class="rodape-div-3-coluna">
               <!-- elemento -->
               <span><b>Links</b></span>
-              <p><a href="#servicos">Serviços</a></p>
-              <p><a href="#empresa">Empresa</a></p>
+              <p><a href="../rodapetelas/redes.html">Redes</a></p>
+              <p><a href="../rodapetelas/duvidas.html">Dúvidas</a></p>
               <p><a href="..\sobre.html">Sobre</a></p>
           </div>
       </div>
