--- a/sobre.html
+++ b/sobre.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/kpopland.png">
     <title>Sobre Nós</title>
     <style>
         body {
@@ -125,7 +126,9 @@
         <img src="img/luizz.jpeg" alt="Foto do Criador" class="foto"> <!-- Substitua pelo caminho da sua imagem -->
         <h2>Sobre o Criador</h2>
         <p>Olá! Eu sou Luiz Fernando, e sou aluno da Etec Prof. ALfredo de Barros Santos. Atualmente curso Desenvolvimento de Sistemas e aprendi a desenvolver
-            e criar sites. E com muito esforço e dedicação eu criei este sobre diversos grupos de kpop, um gênero musical que eu gosto muito. 
+            e criar sites. E com muito esforço e dedicação eu criei este sobre diversos grupos de kpop, um gênero musical que eu gosto muito. Penso que você
+            pode fazer o que quiser, mas se for o que realmente goste não perca seu tempo e vá atrás. Pois a vida é uma só e não fique com medo de tentar e sim
+            de não tentar. 
         </p>
         <button class="botao-bolo" onclick="window.location.href='./jogo/jogo.html'">Jogar</button> <!-- Substitua 'jogo.html' pela sua página de jogo -->
     </div>
@@ -138,26 +141,26 @@
         <div class="rodape-div-1">
             <div class="rodape-div-1-coluna">
                 <!-- elemento -->
-                <img src="img/kpopland.png" width="130">
-                <p>SIA Trecho 5 lote 000 bloco z sala 900 - Guará, Brasília - DF, 70000-010</p>
+                <img alt="" src="img/kpopland.png" width="130">
+                <p>Feito: Luiz Fernando</p>
             </div>
         </div>
-
+  
         <div class="rodape-div-2">
             <div class="rodape-div-2-coluna">
                 <!-- elemento -->
                 <span><b>Contatos</b></span>
-                <p>contato@na.na</p>
-                <p>+55 63 99200-0000</p>
+                <p>luiz.toledo12@etec.sp.gov.br</p>
+                <p>+55 12 996394245</p>
             </div>
         </div>
-
+  
         <div class="rodape-div-3">
             <div class="rodape-div-3-coluna">
                 <!-- elemento -->
                 <span><b>Links</b></span>
-                <p><a href="#servicos">Serviços</a></p>
-                <p><a href="#empresa">Empresa</a></p>
+                <p><a href="./rodapetelas/redes.html">Redes</a></p>
+                <p><a href="./rodapetelas/duvidas.html">Dúvidas</a></p>
                 <p><a href="sobre.html">Sobre</a></p>
             </div>
         </div>
