--- a/aespa/karina.html
+++ b/aespa/karina.html
@@ -20,15 +20,15 @@
 
   <!-- Perfil do usuário -->
   <div class="container">
-    <img src="https://i.pinimg.com/236x/d3/dd/17/d3dd17c0c239228122857a605681483d.jpg" alt="Foto de Perfil" class="profile-img">
+    <img src="https://i.pinimg.com/236x/a0/42/88/a042888b9cd42bd2fcc080cd641b8468.jpg" alt="Foto de Perfil" class="profile-img">
     <div class="profile-info">
-      <h2>Winter</h2>
+      <h2>Karina</h2>
       <div class="info-panel">
-        <p>Nome completo: Kim Min-jeong</p>
-        <p>Aniversário: 11 de abril de 2000</p>
-        <p>Idade: 24 anos de idade</p>
-        <p>Tipo sanguíneo: B</p>
-        <p>Signo do zodíaco: Àries</p>
+        <p>Nome completo: Yu Ji-min</p>
+        <p>Aniversário: 1 de janeiro de 2001</p>
+        <p>Idade: 23 anos de idade</p>
+        <p>Tipo sanguíneo: A</p>
+        <p>Signo do zodíaco: Capricórnio</p>
       </div>
     </div>
   </div>
@@ -36,14 +36,14 @@
   <!-- Galeria -->
   <h1>Galeria</h1>
   <div class="gallery">
-    <img src="https://i.pinimg.com/236x/39/6d/2e/396d2efa175bf7b97d800a9aa27087ff.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/236x/e2/38/90/e23890e4eeb98daec376cd6e347775cd.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/736x/02/35/1a/02351a1ff0a1d814dd43bc55c5600cf1.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/736x/48/39/b8/4839b8b66403499939fb9f4c521de385.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/736x/26/d1/26/26d126e1d3a963fb50f70755d35163a4.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/736x/2e/35/5a/2e355a8e85fa3399731ad14c9d76ca6e.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/736x/b5/3b/76/b53b76a87fb2f091af5e061225722ea4.jpg" alt="" loading="lazy">
-    <img src="https://i.pinimg.com/736x/af/62/de/af62de446e27fea6c76d5ab5bc297b86.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/70/03/ad/7003ad8338f00c6ec071db3dc833cf42.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/b5/8e/e3/b58ee39d409de90109d539300bdef669.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/6b/98/cd/6b98cd6a0eb34315910e206a56f6d6a2.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/d5/38/b6/d538b65e1835701d623b7c18f0951787.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/65/8e/04/658e0494ba12deaab47195f62420c0c0.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/47/c0/ff/47c0ff7aa49625d17b2b80ddaa5256d7.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/f3/d7/09/f3d7099bfa96edf2793b1e9ae91556ad.jpg" alt="" loading="lazy">
+    <img src="https://i.pinimg.com/736x/d2/fd/90/d2fd9076c21cec5fc9d5417c8f6b9fa2.jpg" alt="" loading="lazy">
     <!-- Adicione mais imagens conforme necessário -->
   </div>
 
