--- a/aespa.html
+++ b/aespa.html
@@ -62,7 +62,8 @@
 <body>
 
    <div id="navbar">
-    <a href="index.html"><img src="img/kpopland.png" width="140"></a> 
+    <a href="index.html"><img src="img/kpopland.png" width="120"></a>
+    <img src="https://i.pinimg.com/736x/cd/cf/6a/cdcf6aacbc7b87b606b7f4ca02508560.jpg" width="140">
    </div>
     
    <div class="conteudo">
@@ -72,14 +73,14 @@
         <div class="team">
           <ul class="auto-grid"  li-style-type: none>
             <li li-style-type: none>
-              <a href="#" class="profile" style="text-decoration: none;">
+              <a href="./aespa/karina.html" class="profile" style="text-decoration: none;">
                 <h2 class="profile__name">Karina</h2>
                 <p>Líder</p>
                 <img alt="Anita Simmons" src="https://i.pinimg.com/736x/ce/7b/e9/ce7be9f9c9a1038b819222e5bee0f805.jpg" />
               </a>
             </li>
             <li>
-              <a href="#"  class="profile" style="text-decoration: none;">
+              <a href="./aespa/winter.html"  class="profile" style="text-decoration: none;">
                 <h2 class="profile__name">Winter</h2>
                 <p>Lead vocalist, lead dancer</p>
                 <img alt="Profile shot for Celina Harris" src="https://i.pinimg.com/736x/5a/f3/ea/5af3eadf20207530f25f886934742f6c.jpg" />
@@ -117,6 +118,18 @@
 
   <h3>Músicas</h3>
   <div class="musicas">
+
+    <div class="player" id="music5">
+        <div class="imgbox">
+            <img src="https://i.pinimg.com/736x/d1/7c/6b/d17c6b64d825b85eff9ad4593cd86d4d.jpg" alt="aespa">
+        </div>
+        <h4 class="unlock-regular" style="color: blueviolet;">Whiplash</h4>
+        <audio src="musicas/Whiplash.mp3" type="audio/mp3" controls></audio>
+        <div id="botao">
+            <button class="boton-elegante" onclick="openPopup('Whiplash', document.getElementById('lyrics5').innerHTML)">Letra</button>
+        </div>
+    </div>
+
       <div class="player" id="music1">
           <div class="imgbox">
               <img src="https://i.pinimg.com/474x/9c/15/67/9c15671a120e074b525836143f5f0f8e.jpg" alt="lesserafim">
@@ -166,8 +179,15 @@
 
 
   <div class="albuns">
+    <div class="card">
+        <img src="https://i.scdn.co/image/ab67616d0000b2736eb604294f8f58c9078f58b1" alt="" class="card-img">
+        <h2 class="card-title">Whiplash - The 5th Mini Album</h2>
+        <p class="card-text">aespa está de volta aos holofotes com seu mais recente mini-álbum Whiplash , apresentando o eletrizante single principal de mesmo nome.</p>
+        <span class="card-date">21 de Outubro de 2024</span>
+    </div>
+
       <div class="card">
-          <img src="https://i.scdn.co/image/ab67616d0000b273d8cc2281fcd4519ca020926b" alt="Imagem da Notícia" class="card-img">
+          <img src="https://i.scdn.co/image/ab67616d0000b273d8cc2281fcd4519ca020926b" alt="" class="card-img">
           <h2 class="card-title">Savage - The 1st Mini Album</h2>
           <p class="card-text">È o primeiro mini-álbum do grupo feminino sul-coreano aespa, lançado em 5 de outubro de 2021 pela SM Entertainment. </p>
           <span class="card-date">10 de Outubro de 2024</span>
@@ -181,7 +201,7 @@
       </div>
 
       <div class="card">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReyuftQkBGb4ZcDu4tpHiiWbqyh8ZyCaapjg&s" alt="Imagem da Notícia" class="card-img">
+          <img src="https://i.scdn.co/image/ab67616d0000b273b3be3b970fc89a02f301c9da" alt="Imagem da Notícia" class="card-img">
           <h2 class="card-title">Girls</h2>
           <p class="card-text">È o segundo extended play do girl group sul-coreano Aespa. O EP foi lançado pela SM Entertainment e Warner Records em 8 de julho de 2022.</p>
           <span class="card-date">10 de Outubro de 2024</span>
@@ -593,6 +613,80 @@
 <p>Hey Ma Mamba</p>
 
     </div>
+    <div id="lyrics5">
+        <p>Yeah</p>
+<p>One look, give 'em whiplash</p>
+<p>Beat drop with a big flash</p>
+<p>Jipjunghae jom deo think fast</p>
+<p>Iyu neon ihae mot hae, uh</p>
+<p>Wae ijeya, know I did that, uh</p>
+<p>Day one, know I been bad, uh</p>
+<p>Don't stop, heundeullin chae</p>
+<p>Murihaedo can't touch that (Can't touch that)</p>
+
+<p>Under pressure, body sweating, can you focus? (Yeah)</p>
+<p>Eodiseona geochimeopseo, I'm the coldest</p>
+<p>Ojik namani i paneul bakkul changer</p>
+<p>Just close your eyes, breathe in and visualize</p>
+
+<p>One look, give 'em whiplash</p>
+<p>Beat drop with a big flash</p>
+<p>Jipjunghae jom deo think fast</p>
+<p>Iyu neon ihae mot hae, uh</p>
+<p>Wae ijeya, know I did that, uh (Yeah)</p>
+<p>Day one, know I been bad</p>
+<p>Don't stop, heundeullin chae (Yeah)</p>
+<p>Murihaedo can't touch that (Can't touch that)</p>
+
+<p>Whip-whiplash, whip-whiplash</p>
+<p>Whip-whiplash, whip-whiplash</p>
+<p>Whip-whiplash, whip-whiplash</p>
+<p>Whip-whiplash, one look, give 'em whiplash</p>
+
+<p>Fancy, igeon cham hwaryeohae</p>
+<p>It's glowing and it's flashy (Yeah)</p>
+<p>Ara jeokdanghami mwonji keep it classy</p>
+<p>Ttara haji neon tto hanabuteo yeolkkaji (Yeah)</p>
+<p>Anincheokaji, yeah</p>
+
+<p>Under pressure, body sweating, can you focus? (Hoo)</p>
+<p>I deliver, I can promise, I'm the coldest (Cold)</p>
+<p>Oemyeonhaedo soyongeopji don't you blow it?</p>
+<p>Just close your eyes, breathe in and visualize</p>
+
+<p>Sijakdoeneun sungan kkeunnabeorin pandan</p>
+<p>Gihoen ojik one time, unforgettable</p>
+<p>Chajanaen the right light, sarajiji ana</p>
+<p>Nune saegin one time, unforgettable</p>
+
+<p>One look, give 'em whiplash (Sheesh)</p>
+<p>Beat drop with a big flash</p>
+<p>Jipjunghae jom deo think fast</p>
+<p>Iyu neon ihae mot hae (Mm)</p>
+<p>Wae ijeya, know I did that (Yeah)</p>
+<p>Day one, know I been bad, uh (Yeah)</p>
+<p>Don't stop, heundeullin chae</p>
+<p>Murihaedo can't touch that (Can't touch that)</p>
+
+<p>I'm the highlight, bichwo red light</p>
+<p>Yeah, tonight It's all about me (All about me)</p>
+<p>You know it's my site, geochin next sigh</p>
+<p>Mandeureogal history</p>
+
+<p>One look, give 'em whiplash (Whip-whip)</p>
+<p>Beat drop with a big flash (Yeah)</p>
+<p>Ttarawa eoseo move fast (Move, move, move)</p>
+<p>Iyu neon ihae mot hae, uh (Yeah)</p>
+<p>Wae ijeya, know I did that (Did that)</p>
+<p>Day one, know I been bad (Been bad)</p>
+<p>Don't stop, heundeullin chae (Yeah)</p>
+<p>Dagawado can't touch that (Can't touch that)</p>
+
+<p>Whip-whiplash, whip-whiplash</p>
+<p>Whip-whiplash, whip-whiplash</p>
+<p>Whip-whiplash, whip-whiplash</p>
+<p>Whip-whiplash, one look, give 'em whiplash</p>
+    </div>
   </div>
 
   <script>
@@ -632,7 +726,7 @@
       <div class="rodape-div-2-coluna">
           <!-- elemento -->
           <span><b>Contatos</b></span>
-          <p>luiz.toledo12@etec.sp.gov.br</p>
+          <p>luiztld@gmail.com</p>
           <p>+55 12 996394245</p>
       </div>
   </div>
