--- a/ateez.html
+++ b/ateez.html
@@ -64,7 +64,8 @@
 <body>
 
     <div id="navbar">
-        <a href="index.html"><img alt="Profile shot for Celina Harris" src="img/kpopland.png" width="140"></a>
+        <a href="index.html"><img alt="Profile shot for Celina Harris" src="img/kpopland.png" width="120"></a>
+        <img alt="" src="https://i.pinimg.com/736x/13/9e/25/139e2550cd35a0904afb4dbb16b656a0.jpg" width="140">
     </div>
 
     <div class="conteudo">
@@ -84,28 +85,28 @@
                         <a href="#" class="profile" style="text-decoration: none;">
                             <h2 class="profile__name">Hongjoong</h2>
                             <p></p>
-                            <img alt="Chaewon" src="https://pm1.aminoapps.com/7426/2bbf55ee81b8a9bae20f1e1c53ca478c7f73560fr1-702-702v2_00.jpg" />
+                            <img alt="" src="https://i.pinimg.com/736x/05/67/b8/0567b8c39f76650e228297086eb3788b.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#" class="profile" style="text-decoration: none;">
                             <h2 class="profile__name">Seonghwa</h2>
                             <p></p>
-                            <img alt="Sakura" src="https://pm1.aminoapps.com/9072/c270a38323cbb02e9efd3e17788501fe355dee93r1-1280-1280v2_00.jpg" />
+                            <img alt="" src="https://pm1.aminoapps.com/9072/c270a38323cbb02e9efd3e17788501fe355dee93r1-1280-1280v2_00.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#" class="profile" style="text-decoration: none;">
                             <h2 class="profile__name">Yunho</h2>
                             <p></p>
-                            <img alt="Yunjin" src="https://i.mydramalist.com/QJj2O5_5f.jpg" />
+                            <img alt="" src="https://i.mydramalist.com/QJj2O5_5f.jpg" />
                         </a>
                     </li>
                     <li>
                         <a href="#" class="profile" style="text-decoration: none;">
                             <h2 class="profile__name">Yeosang</h2>
                             <p></p>
-                            <img alt="Yeosang" src="https://preview.redd.it/kpoppie-antics-again-this-time-cast-kang-yeosang-for-me-v0-syl2270nce3c1.jpg?width=640&crop=smart&auto=webp&s=8ed6751fa44c1511b02a3d73606719285c79c2f0" />
+                            <img alt="" src="https://preview.redd.it/kpoppie-antics-again-this-time-cast-kang-yeosang-for-me-v0-syl2270nce3c1.jpg?width=640&crop=smart&auto=webp&s=8ed6751fa44c1511b02a3d73606719285c79c2f0" />
                         </a>
                     </li>
                     <li>
