--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="navbar">
-        <img src="img/kpopland.png" width="140">
+        <img src="img/kpopland.png" width="120">
       </div>
     
  <!--https://pt.rakko.tools/tools/56/-->
@@ -68,7 +68,7 @@
         <p class="info">
             <span>Stray Kids</span>
             <strong>Ver mais</strong>
-            <button>+</button>
+            <a href="straykids.html"><button>+</button></a>
         </p>
     </ul>
 
@@ -121,6 +121,38 @@
             <button>+</button>
         </p>
     </ul>
+
+     <ul>
+        <p class="info">
+            <span>ASTRO</span>
+            <strong>Ver mais</strong>
+            <button>+</button>
+        </p>
+    </ul>
+
+     <ul>
+        <p class="info">
+            <span>EVERGLOW</span>
+            <strong>Ver mais</strong>
+            <button>+</button>
+        </p>
+    </ul>
+
+     <ul>
+        <p class="info">
+            <span>RIIZE</span>
+            <strong>Ver mais</strong>
+            <button>+</button>
+        </p>
+    </ul>
+
+     <ul>
+        <p class="info">
+            <span>SEVENTEEN</span>
+            <strong>Ver mais</strong>
+            <button>+</button>
+        </p>
+    </ul>
 </nav>
 
 <br> <br> <br> <br>
@@ -139,7 +171,7 @@
             <div class="rodape-div-2-coluna">
                 <!-- elemento -->
                 <span><b>Contatos</b></span>
-                <p>luiz.toledo12@etec.sp.gov.br</p>
+                <p>luiztld@gmail.com</p>
                 <p>+55 12 996394245</p>
             </div>
         </div>
@@ -151,6 +183,7 @@
                 <p><a href="./rodapetelas/redes.html">Redes</a></p>
                 <p><a href="./rodapetelas/duvidas.html">Dúvidas</a></p>
                 <p><a href="sobre.html">Sobre</a></p>
+                <p><a href="./comunidade/comunidade.php">Comunidade</a></p>
             </div>
         </div>
 
