--- a/lesserafim.html
+++ b/lesserafim.html
@@ -65,6 +65,7 @@
 
     <div id="navbar">
         <a href="index.html"><img alt="Profile shot for Celina Harris" src="img/kpopland.png" width="140"></a>
+        <img alt="" src="https://i.pinimg.com/736x/99/33/0b/99330b2751aa750cd4227ce04c486ed7.jpg" width="140">
     </div>
 
     <div class="conteudo">
